--- a/category.html
+++ b/category.html
@@ -44,7 +44,7 @@
         <!--header -->
 
 
-        <nav class="navbar navbar-expand-md navbar-fixed-top">
+        <nav class="navbar navbar-dark navbar-expand-md navbar-fixed-top">
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -64,9 +64,6 @@
                         <a class="nav-link" href="#">Library</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">E-learning</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#">Admission</a>
                     </li>
                     <li class="nav-item">
@@ -82,8 +79,122 @@
         <hr>
         <h1 class="text-center">Category</h1>
         <hr>
-
-        <footer class="bg-dark text-center text-light">
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="card-header bg-light">
+                        <h3 class=" text-center">Information Technology</h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus architecto rem sit sequi
+                            qui?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8 col-md-6">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias sapiente asperiores ipsa accusantium voluptatum minima harum
+                eum facere accusamus in quidem dicta, atque nemo quo magnam explicabo veritatis, aspernatur facilis eaque,
+                culpa ducimus! Quisquam quam quibusdam pariatur qui est? Illo? Lorem ipsum, dolor sit amet consectetur adipisicing
+                elit. Alias sapiente asperiores ipsa accusantium voluptatum minima harum eum facere accusamus in quidem dicta,
+                atque nemo quo magnam explicabo veritatis, aspernatur facilis eaque, culpa ducimus! Quisquam quam quibusdam
+                pariatur qui est? Illo?
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="card-header bg-light">
+                        <h3 class=" text-center">Education</h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus architecto rem sit sequi
+                            qui?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8 col-md-6">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias sapiente asperiores ipsa accusantium voluptatum minima harum
+                eum facere accusamus in quidem dicta, atque nemo quo magnam explicabo veritatis, aspernatur facilis eaque,
+                culpa ducimus! Quisquam quam quibusdam pariatur qui est? Illo? Lorem ipsum, dolor sit amet consectetur adipisicing
+                elit. Alias sapiente asperiores ipsa accusantium voluptatum minima harum eum facere accusamus in quidem dicta,
+                atque nemo quo magnam explicabo veritatis, aspernatur facilis eaque, culpa ducimus! Quisquam quam quibusdam
+                pariatur qui est? Illo?
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="card-header bg-light">
+                        <h3 class=" text-center">Business Administration</h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus architecto rem sit sequi
+                            qui?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8 col-md-6">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias sapiente asperiores ipsa accusantium voluptatum minima harum
+                eum facere accusamus in quidem dicta, atque nemo quo magnam explicabo veritatis, aspernatur facilis eaque,
+                culpa ducimus! Quisquam quam quibusdam pariatur qui est? Illo? Lorem ipsum, dolor sit amet consectetur adipisicing
+                elit. Alias sapiente asperiores ipsa accusantium voluptatum minima harum eum facere accusamus in quidem dicta,
+                atque nemo quo magnam explicabo veritatis, aspernatur facilis eaque, culpa ducimus! Quisquam quam quibusdam
+                pariatur qui est? Illo?
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="card-header bg-light">
+                        <h3 class=" text-center">medicine</h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus architecto rem sit sequi
+                            qui?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8 col-md-6">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias sapiente asperiores ipsa accusantium voluptatum minima harum
+                eum facere accusamus in quidem dicta, atque nemo quo magnam explicabo veritatis, aspernatur facilis eaque,
+                culpa ducimus! Quisquam quam quibusdam pariatur qui est? Illo? Lorem ipsum, dolor sit amet consectetur adipisicing
+                elit. Alias sapiente asperiores ipsa accusantium voluptatum minima harum eum facere accusamus in quidem dicta,
+                atque nemo quo magnam explicabo veritatis, aspernatur facilis eaque, culpa ducimus! Quisquam quam quibusdam
+                pariatur qui est? Illo?
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="card">
+                    <div class="card-header bg-light">
+                        <h3 class=" text-center">Information Technology</h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus architecto rem sit sequi
+                            qui?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8 col-md-6">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias sapiente asperiores ipsa accusantium voluptatum minima harum
+                eum facere accusamus in quidem dicta, atque nemo quo magnam explicabo veritatis, aspernatur facilis eaque,
+                culpa ducimus! Quisquam quam quibusdam pariatur qui est? Illo? Lorem ipsum, dolor sit amet consectetur adipisicing
+                elit. Alias sapiente asperiores ipsa accusantium voluptatum minima harum eum facere accusamus in quidem dicta,
+                atque nemo quo magnam explicabo veritatis, aspernatur facilis eaque, culpa ducimus! Quisquam quam quibusdam
+                pariatur qui est? Illo?
+            </div>
+        </div>
+        <hr>
+        <footer class="text-center">
             <div class="row">
                 <div class="col-lg-4">
                     <h3>lorem ipsum</h3>
@@ -111,7 +222,7 @@
                 </div>
 
             </div>
-            <div class="copyright text-center bg-dark">
+            <div class="text-center">
                 <p>&copy;Copyright auca 2020</p>
             </div>
         </footer>
