--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!--header -->
 
 
-        <nav class="navbar navbar-expand-md navbar-fixed-top">
+        <nav class="navbar navbar-dark navbar-expand-md navbar-fixed-top">
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -64,9 +64,6 @@
                         <a class="nav-link" href="#">Library</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">E-learning</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#">Admission</a>
                     </li>
                     <li class="nav-item">
@@ -82,7 +79,7 @@
         <hr>
 
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-8">
                 <div id="demo" class="carousel slide" data-ride="carousel">
                     <ul class="carousel-indicators">
                         <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -128,7 +125,7 @@
                 </div>
             </div>
             <!-- carousel -->
-            <div class="col-lg-6 jumbotron">
+            <div class="col-lg-6 col-md-4 jumbotron">
                 <h2 class="text-center">Welcome to AUCA</h2>
                 <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas id sed consequatur consectetur animi laudantium
                     nesciunt aut incidunt expedita inventore tempore, unde sit earum officia. Fugit alias nostrum nam rerum?</p>
@@ -205,16 +202,16 @@
         </div>
         <hr>
 
-        <footer class="text-center text-light">
+        <footer class="text-center">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-12">
                     <h3>lorem ipsum</h3>
                     <p>
                         <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, repudiandae delectus rem tempora
                             numquam magnam ipsum labore expedita facere vitae!</small>
                     </p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-12">
                     <h3 class="">Contact Us</h3>
                     <p>
                         <span class="fa fa-envelope-square"></span> Email: auca.ac.rw@gmail.com</p>
@@ -223,7 +220,7 @@
                     <p>
                         <span class="fa fa-mailbox"></span> PO Box 2461, Kigali Rwanda</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-12">
                     <h3>lorem ipsum</h3>
                     <p>
                         <small>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum quos consequuntur repudiandae voluptatem
@@ -233,7 +230,7 @@
                 </div>
 
             </div>
-            <div class="copyright text-center bg-dark">
+            <div class="text-center">
                 <p>&copy;Copyright auca 2020</p>
             </div>
         </footer>
