--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <!--header -->
 
 
-        <nav class="navbar navbar-expand-md navbar-fixed-top">
+        <nav class="navbar navbar-dark navbar-expand-md navbar-fixed-top">
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -64,9 +64,6 @@
                         <a class="nav-link" href="#">Library</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">E-learning</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#">Admission</a>
                     </li>
                     <li class="nav-item">
@@ -83,10 +80,10 @@
         <h1 class="text-center">About Us</h1>
         <br>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4 col-md-6">
                 <img class="img-fluid" src="images/image1.jpg" alt="">
             </div>
-            <div class="col-md-8">
+            <div class="col-lg-8 col-md-6">
                 <h2 class="text-center">lorem</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, ducimus voluptas. Fuga, ad deleniti! Quibusdam
                     iste perferendis facilis voluptatum, explicabo debitis expedita quidem illo. Deleniti recusandae perspiciatis
@@ -96,10 +93,10 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4 col-md-6">
                 <img class="img-fluid" src="images/image2.jpg" alt="">
             </div>
-            <div class="col-md-8">
+            <div class="col-lg-8 col-md-6">
                 <h2 class="text-center">lorem</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, ducimus voluptas. Fuga, ad deleniti! Quibusdam
                     iste perferendis facilis voluptatum, explicabo debitis expedita quidem illo. Deleniti recusandae perspiciatis
@@ -109,10 +106,10 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4 col-md-6">
                 <img class="img-fluid" src="images/image3.jpg" alt="">
             </div>
-            <div class="col-md-8">
+            <div class="col-lg-8 col-md-6">
                 <h2 class="text-center">lorem</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, ducimus voluptas. Fuga, ad deleniti! Quibusdam
                     iste perferendis facilis voluptatum, explicabo debitis expedita quidem illo. Deleniti recusandae perspiciatis
@@ -121,7 +118,7 @@
             </div>
         </div>
         <hr>
-        <footer class="bg-dark text-center text-light">
+        <footer class="text-center">
             <div class="row">
                 <div class="col-lg-4">
                     <h3>lorem ipsum</h3>
@@ -149,7 +146,7 @@
                 </div>
 
             </div>
-            <div class="copyright text-center bg-dark">
+            <div class="text-center">
                 <p>&copy;Copyright auca 2020</p>
             </div>
         </footer>
