--- a/article.html
+++ b/article.html
@@ -44,7 +44,7 @@
         <!--header -->
 
 
-        <nav class="navbar navbar-expand-md navbar-fixed-top">
+        <nav class="navbar navbar-dark navbar-expand-md navbar-fixed-top">
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -62,9 +62,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Library</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">E-learning</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Admission</a>
@@ -109,7 +106,7 @@
             </div>
         </div>
         <hr>
-        <footer class="bg-dark text-center text-light">
+        <footer class="text-center">
             <div class="row">
                 <div class="col-lg-4">
                     <h3>lorem ipsum</h3>
@@ -137,7 +134,7 @@
                 </div>
 
             </div>
-            <div class="copyright text-center bg-dark">
+            <div class="text-center">
                 <p>&copy;Copyright auca 2020</p>
             </div>
         </footer>
